--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {
 .contacts {
   display: flex;
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -78,14 +79,17 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
   color: var(--main-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-link {
   color: var(--second-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon {
   fill: var(--second-color);
   margin-right: 10px;
   vertical-align: middle;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover .icon,
 .contacts-link:hover .icon,
@@ -98,6 +102,24 @@ body {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
+.links-item {
+  position: relative;
+}
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+.current {
+  color: var(--accent-color);
+}
+
 .navigation {
   align-items: center;
 }
@@ -195,9 +217,29 @@ body {
   display: flex;
   margin-right: -30px;
 }
+.work-item {
+  position: relative;
+  height: 294px;
+}
 .examples {
   flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
+}
+.label {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 370px;
+  background-color: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
 .special-bgc {
   background-color: #f5f4fa;
@@ -249,10 +291,12 @@ body {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-item {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:hover,
 .social-list-link:focus {
@@ -281,9 +325,11 @@ body {
   height: 92px;
   justify-content: center;
   align-items: center;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-item {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-link:hover,
 .customer-link:focus {
@@ -317,6 +363,7 @@ body {
 }
 .address-link {
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:focus,
 .address-link:hover {
@@ -356,6 +403,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link-item {
@@ -384,6 +432,8 @@ body {
   padding: 6px 22px;
   background: #f5f4fa;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-item:hover,
 .filter-item:focus {
@@ -415,11 +465,10 @@ body {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc((100% - 90px) / 3);
-  /* border: 1px solid #eeeeee; */
   width: 370px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-subscribe {
-  margin-top: -4px;
   border: 1px solid #eeeeee;
   border-top: none;
   padding: 20px 24px;
@@ -440,4 +489,65 @@ body {
 }
 .project-descript {
   display: none;
+}
+.project-card-item {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+  color: var(--white-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-card:focus .overlay,
+.project-card:hover .overlay {
+  transform: translateY(0%);
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  height: 580px;
+  width: 530px;
+  position: absolute;
+  background-color: var(--white-color);
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
 }
