--- a/css/styles.css
+++ b/css/styles.css
@@ -520,11 +520,16 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  /* transform: scale(100%); */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
-  visibility: hidden;
+  /* visibility: hidden; */
   pointer-events: none;
+  /* transform: scale(0%); */
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .modal {
   height: 580px;
