hw5-checked&fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   color: var(--main-color);
 }
 .pref-descript {
@@ -211,7 +211,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 .works {
   display: flex;
@@ -268,7 +268,7 @@ body {
   font-size: 16px;
   line-height: 19px;
   color: var(--main-color);
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 .team-position {
   font-size: 16px;
@@ -418,11 +418,9 @@ body {
 .filter {
   display: flex;
   justify-content: center;
-  margin: 0 -8px 34px 0;
-  padding-bottom: 16px;
+  margin-bottom: 50px;
 }
 .filter-item {
-  flex-basis: calc(100% / 5 - 8px);
   margin-right: 8px;
   font-weight: 500;
   font-size: 16px;
@@ -433,7 +431,8 @@ body {
   background: #f5f4fa;
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-item:hover,
 .filter-item:focus {
@@ -455,18 +454,20 @@ body {
   grid-column-gap: 30px;
   grid-row-gap: 30px; */
 }
-.projects-list:focus,
-.projects-list:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .projects-list {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc((100% - 90px) / 3);
   width: 370px;
+}
+.project-card {
+  display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-card:focus,
+.project-card:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .project-subscribe {
   border: 1px solid #eeeeee;
